tests/ok/item-macro-const-identity.ari
meta fn make_item(input: token_stream) -> token_stream {
}

make_item!(const GENERATED: i64 = 40 + 2;);

fn main() -> i64 {
  return GENERATED;
}
