tests/errors/macro-call-planned.ari
meta fn make_value(input: token_stream) -> token_stream {
}

fn main() -> i64 {
  return make_value!(1 + 2);
}
